--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header class="bg-secondary text-white p-4"> 
         <h1 class="text-center">Arquitectura Empresarial</h1>
         <p class="text-center">Arquitectura Empresarial</p>
+        <p class="text-center">GARCIA CARDENAS URIEL</p>
     </header>
     <div class="container mt-5">
         <div class="row">
